Fixed Kontakt page iframe and picture width problem on mobile phones

--- a/style.css
+++ b/style.css
@@ -224,16 +224,21 @@ li {
     position: relative;
     text-align: right;
     height: 500px;
-    width: 1100px;
+    width: 100%;
 }
 
 .gmap_canvas {
     overflow: hidden;
     background: none !important;
     height: 500px;
-    width: 1100px;
+    width: 100%;
     border-radius: 1rem;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+iframe {
+    width:100%;
+    height:500px;
 }
 
 .btn {
